Time: 17 ms (73.43%), Space: 43.9 MB (79.23%) - LeetHub